--- a/AntVior/about.html
+++ b/AntVior/about.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en" manifest="offline.appcache">
 
 <head>
     <meta charset="UTF-8">
@@ -29,7 +29,6 @@
     <nav id="drawer">
         <ul>
             <li><a href="index.html">Home</a></li>
-            <li><a href="#">Load existing state</a></li>
         </ul>
     </nav>
 
@@ -76,7 +75,7 @@
         </div>
     </section>
 
-    <script type="text/javascript" src="about.js"></script>
+    <script src="about.js"></script>
 </body>
 
 </html>
