--- a/AntVior/index.html
+++ b/AntVior/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html manifest="offline.appcache">
 
 <head>
     <meta charset="UTF-8">
@@ -26,27 +26,19 @@
     <div class="loading" id="loading">
         <div class="progress" id="progress"></div>
     </div>
-    <input type="checkbox" id="drawer-toggle" name="drawer-toggle" />
-    <label for="drawer-toggle" id="drawer-toggle-label"></label>
-    <nav id="drawer">
-        <ul>
-            <li><a href="about.html">About ants</a></li>
-            <li><a href="#">Load existing state</a></li>
-        </ul>
-    </nav>
     <div class="content" style="height: 100%; width: 100%;">
         <h1 class="main-title" id="main-title">Ant Colony Behavior Simulator</h1>
         <a href="simulator.html" class="btn-cont btn btn-simulation" id="start">Start Simulation</a>
     </div>
 
     <div id="background">
-        <video src="videos/ants.mp4" id="bgvid" playsinline autoplay muted loop>
+        <video src="videos/trees.mov" id="bgvid" playsinline autoplay muted loop>
         </video>
-        <img class="overlay" src="images/overlay-focus.png" />
-        <img class="overlay" src="images/overlay-vignette.png" />
+        <img alt ="overlay" class="overlay" src="images/overlay-focus.png" />
+        <img alt ="overlay" class="overlay" src="images/overlay-vignette.png" />
     </div>
 
-    <script type="text/javascript" src="main.js"></script>
+    <script src="main.js"></script>
 </body>
 
 </html>
